--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:name=".views.PlanetActivity"
             android:label="SpaceTrader">
         </activity>
+        <activity
+            android:name=".views.CargoActivity"
+            android:label="SpaceTrader">
+        </activity>
     </application>
 
 </manifest>
