--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".views.StartActivity"
+            android:name=".views.MarketActivity"
             android:label="SpaceTrader">
         </activity>
         <activity
