--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:name=".views.CargoActivity"
             android:label="SpaceTrader">
         </activity>
+        <activity
+            android:name=".views.TravelActivity"
+            android:label="SpaceTrader">
+        </activity>
     </application>
 
 </manifest>
