--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,14 @@
             android:name=".views.TravelPlanetActivity"
             android:label="SpaceTrader">
         </activity>
+        <activity
+            android:name=".views.PirateActivity"
+            android:label="SpaceTrader">
+        </activity>
+        <activity
+            android:name=".views.PoliceActivity"
+            android:label="SpaceTrader">
+        </activity>
     </application>
 
 </manifest>
