--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,13 @@ dependencies {
     // optional - ReactiveStreams support for LiveData
     implementation "android.arch.lifecycle:reactivestreams:$lifecycle_version"
 
+    // firebase
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-database:16.1.0'
+
     // optional - Test helpers for LiveData
     testImplementation "android.arch.core:core-testing:$lifecycle_version"
 
 }
+
+apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
