Add Police minigame

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,12 @@
             android:name=".views.PoliceActivity"
             android:label="SpaceTrader">
         </activity>
+        <activity
+            android:name=".PoliceEscapeMiniGame.PoliceEscapeActivity"
+            android:label="SpaceTrader"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:screenOrientation="landscape">
+        </activity>
     </application>
 
 </manifest>
