--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     testImplementation "android.arch.core:core-testing:$lifecycle_version"
 
 //    implementation 'com.google.firebase:firebase-database:16.0.1:15.0.0'
+
+    //gson stuff here
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
 
 apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
